--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,6 +5,7 @@ div.topbar {
     background: linear-gradient(to left,#28a5f5,#1e87f0)!important;
 }
 header.hero-header {
+    margin-top: -80px;
     background-image: url("../image/kinoko-hero.jpg");
     background-size: cover;
     &:before {
@@ -13,7 +14,6 @@ header.hero-header {
         width: 100%;
         height: 100%;
         background: rgba(66,66,66,0.5);
-        top: 80px;
     }
 }
 .uk-section:nth-child(even) {
@@ -24,5 +24,5 @@ p, .event-table tr td {
 }
 .footer-cover {
     padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-bottom: 2rem;
 }
