--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,5 @@
 * {
-    font-family: "BIZ UDPGothic",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji" !important;
+    font-family: "Montserrat","BIZ UDPGothic",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji" !important;
 }
 div.topbar {
     background: linear-gradient(to left,#28a5f5,#1e87f0)!important;
