--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,14 +6,14 @@ div.topbar {
 }
 header.hero-header {
     margin-top: -80px;
-    background-image: url("../image/kinoko-hero.jpg");
+    background-image: url("../image/1920x1080_開催情報なし.png");
     background-size: cover;
     &:before {
         content: "";
         position: absolute;
         width: 100%;
         height: 100%;
-        background: rgba(66,66,66,0.5);
+        background: rgba(0, 0, 0, 0.5);
     }
 }
 .uk-section:nth-child(even) {
